overflow fixed finally

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,12 +4,11 @@
 
 html, body {
     scroll-behavior: smooth;
-    margin: auto;
+    /* margin: auto;
     padding: 0;
-    width: 100%;
+    width: 100%; */
  
-    /* overflow-y: scroll; */
-    /* overflow-x: hidden; */
+
 }
 
 h1{
